src/objects/MercurySettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>MercuryBatchId__c</fullName>
        <label>Mercury Batch Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecoverSyncFailure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this switch will enable MercurySyncRecoveryScheduler to run hourly, every time restart MercurySyncRecoveryScheduler should run: System.schedule(&apos;Mercury Recovery&apos;, &apos;0 0 * * * ?&apos;, new MercurySyncRecoveryScheduler() );</description>
        <inlineHelpText>enable MercurySyncRecoveryScheduler to run hourly</inlineHelpText>
        <label>Recover Sync Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SyncInQueue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if checked use Queued Batch to Sync, if not use future</description>
        <inlineHelpText>if checked use Queued Batch to Sync, if not use future</inlineHelpText>
        <label>Sync in queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cleanMismatchAfterSyncBack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, the Mercury Mismatch Queue clean up Batch will will after Mercury Sync Back Batch</description>
        <inlineHelpText>if checked, the Mercury Mismatch Queue clean up Batch will will after Mercury Sync Back Batch</inlineHelpText>
        <label>Clean Mismatch After Sync Back</label>
        <type>Checkbox</type>
    </fields>
    <label>Mercury Settings</label>
</CustomObject>